@@ -31,6 +31,7 @@ Free time project to create lightweight and simple OS for smartwatch, with only 
  - shows current date
  - shows battery status
  - step counter
+ - horizontal swipe (current time|date; simple calendar (current month) )
  - for full list of features, see [changelog.txt](changelog.txt)
 
 ## Known bugs
